--- a/SSALAD/Compatability/F1Ethalox.cfg
+++ b/SSALAD/Compatability/F1Ethalox.cfg
@@ -5,32 +5,32 @@
 	@description = Ethalox version of the F-1 engine for the OV-100 Liquid propane booster system.
 	!tags = 
 	tags = ?F1 Saturn Sarnus ?s1c ?sic ?s1e ?sie ?F1A ?f1B ethalox propane SSALAD
-	// @MODULE[ModuleEnginesFX]
-	// {
-		// @maxThrust = 1944
-		// !PROPELLANT,*{}
-		// PROPELLANT
-		// {
-			// name = LiquidFuel
-			// ratio = 0.9
-			// DrawGauge = True
-		// }
-		// PROPELLANT
-		// {
-			// name = Oxidizer
-			// ratio = 1.1
-		// }
-		// !atmosphereCurve{}
-		// atmosphereCurve
-		// {
-			// key = 0 304
-			// key = 1 263
-		// }
-	// }
-	// @MODULE[ModuleGimbal]
-	// {
-		// @gimbalRange = 5
-	// }
+	 @MODULE[ModuleEnginesFX]
+	 {
+		 @maxThrust = 1944
+		 !PROPELLANT,*{}
+		 PROPELLANT
+		 {
+			 name = Ethanol
+			 ratio = 0.5
+			 DrawGauge = True
+		 }
+		 PROPELLANT
+		 {
+			 name = Oxidizer
+			 ratio = 0.1
+		 }
+		 !atmosphereCurve{}
+		 atmosphereCurve
+		 {
+			 key = 0 304
+			 key = 1 263
+		 }
+	 }
+	 @MODULE[ModuleGimbal]
+	 {
+		 @gimbalRange = 5
+	 }
 	
 	!EFFECTS
 	EFFECTS
@@ -121,8 +121,11 @@
 	MODULE
 	{
 		name = ModuleB9DisableTransform
+		transform = F1A
 		transform = F1V
+		transform = F1AV
 		transform = F1B
+		transform = F1CW
 	}
 	!MODULE[ModuleWaterfallFX]{}
 	MODULE
