--- a/SSALAD/Parts/HLLV/HLLVSecondStage.cfg
+++ b/SSALAD/Parts/HLLV/HLLVSecondStage.cfg
@@ -150,15 +150,15 @@ explosionPotential = 10
 	RESOURCE
 	{
 		name = LqdHydrogen
-		amount = 379260
-		maxAmount = 379260
+		amount = 4975020
+		maxAmount = 4975020
 	}
 
 	RESOURCE
 	{
 		name = Oxidizer
-		amount = 25284
-		maxAmount = 25284
+		amount = 331668
+		maxAmount = 331668
 	}
 	
 	MODULE
@@ -180,7 +180,7 @@ explosionPotential = 10
 		SUBTYPE
 		{
 			name = Long
-			volumeAddedToParent = 60000
+			volumeAddedToParent = 832000
 			transform = LongLength
 			node = TopLong
 		}
@@ -188,7 +188,7 @@ explosionPotential = 10
 		SUBTYPE
 		{
 			name = Longer
-			volumeAddedToParent = 90000
+			volumeAddedToParent = 1248000
 			transform = LongerLength
 			node = TopLonger
 		}
